Fixed update.py to default to writing localhost:8000 into the ALLOWED_HOSTS fiels in settings.py so that there are valid links in the generated emails. Added Wiki Commons SCOTUS seal to banner.  This cause the banner to overflow onto another line, so I went ahead and removed the Login/Logout option from the banner as well.  The login/out links are now being sent in the discovery email.  Fixes #6, fixes #23

--- a/static/css/scotus.css
+++ b/static/css/scotus.css
@@ -1,3 +1,23 @@
+#memento-logo {
+  height: 30px;
+  width: 30px;
+}
+
+#perma-logo {
+  height: 10px;
+  width: 17px;
+}
+
+#webcite-logo {
+  height: 14px;
+  width: 14px;
+}
+
+#scotus-seal {
+  position: relative;
+  top: -6px;
+}
+
 #overview {
   float: left;
   width: 100%;
@@ -33,21 +53,6 @@ input#id_validated {
 .load-wheel {
   font-style: italic;
   font-size:10px;
-}
-
-#memento-logo {
-  height: 30px;
-  width: 30px;    
-}
-
-#perma-logo {
-  height: 10px;
-  width: 17px;
-}
-
-#webcite-logo {
-  height: 14px;
-  width: 14px;
 }
 
 td.centered {
